--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,15 +1,22 @@
 @import "normalize";
-@import "helpers";
 @import "fonts";
 @import "vars-n-mixins";
 @import "blocks/page";
 @import "blocks/main-header";
 @import "blocks/main-info";
 @import "blocks/main-nav";
+@import "blocks/nav-categories";
 @import "blocks/popular-sections";
 @import "blocks/banner";
+@import "blocks/advantages";
 @import "blocks/categories";
 @import "blocks/main-content";
 @import "blocks/popular-products";
 @import "blocks/popular-product";
+@import "blocks/representatives";
+@import "blocks/company-card";
 @import "blocks/contacts";
+@import "blocks/footer-categories";
+@import "blocks/schedule-table";
+@import "blocks/footer-info";
+@import "helpers";
