--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,5 +1,10 @@
 .banner {
   background-color: #aad2e6;
+  @media (min-width: 760px) {
+    height: 564px;
+    box-shadow:
+      0 18px 38px 0 rgba(0, 0, 0, 0.10)
+  }
 }
 
 .banner__content {
@@ -8,6 +13,14 @@
   display: flex;
   flex-direction: column;
   padding-top: 19px;
+  @media (min-width: 760px) {
+    display: none;
+    padding-top: 180px;
+  }
+
+  @media (min-width: 1170px) {
+    padding-top: 142px;
+  }
 }
 
 .banner__heading {
