--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -1,26 +1,94 @@
+.categories {
+  @media (min-width: 760px) {
+    background-image: url("../img/categories-bg-desktop.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #ffffff;
+  }
+}
+
 .categories__content {
   @include mobile-content;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 15px;
+
+  @media (min-width: 760px) {
+    @include tablet-content;
+    padding-top: 70px;
+  }
+
+  @media (min-width: 1170px) {
+    @include desktop-content;
+
+  }
 }
 
 .categories__heading {
   @include mobile-headings;
+  @media (min-width: 760px) {
+    @include desktop-headings;
+    padding-left: 40px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-right: auto;
+  }
 }
 
 .categories__list {
   @include list-reset;
+  margin-bottom: 15px;
+
+  @media (min-width: 760px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-bottom: 92px;
+  }
+
+  @media (min-width: 1170px) {
+
+  }
 }
 
 .categories__item {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   padding-right: 23px;
   background-color: #e9f3fd;
+  width: 290px;
   height: 215px;
+
+  @media (min-width: 760px) {
+    margin-bottom: 20px;
+    width: 358px;
+    height: 300px;
+  }
+
+  @media (min-width: 1170px) {
+    margin-bottom: 20px;
+    width: 365px;
+    height: 215px;
+
+    &:nth-child(1),
+    &:nth-child(2) {
+      width: 560px;
+      height: 410px;
+    }
+
+    &:last-child {
+      width: 1145px;
+    }
+  }
+}
+
+.categories__link {
+  align-self: center;
   font-size: 20px;
   color: #0a5a7e;
   text-transform: uppercase;
