--- a/source/sass/vars-n-mixins.scss
+++ b/source/sass/vars-n-mixins.scss
@@ -1,10 +1,23 @@
 $mobile-width: 290px;
+$tablet-width: 735px;
+$desktop-width: 1145px;
 
 @mixin mobile-content {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
   width: $mobile-width;
+}
+
+@mixin tablet-content {
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 10px;
+  width: $tablet-width;
+}
+
+@mixin desktop-content {
+  width: $desktop-width;
 }
 
 @mixin list-reset {
@@ -14,10 +27,20 @@ $mobile-width: 290px;
 }
 
 @mixin mobile-headings {
-  margin: 0 auto;
+  margin: 0;
   margin-bottom: 35px;
   font-size: 24px;
   font-weight: bold;
   line-height: 11.5px;
   color: #0a5a7e;
+}
+
+@mixin desktop-headings {
+  margin: 0;
+  margin-bottom: 82px;
+  font-size: 46px;
+  font-weight: bold;
+  line-height: 23px;
+  color: #0a5a7e;
+  letter-spacing: 2px;
 }
