--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,8 @@
 .contacts {
+  border-top: 1px solid #04235d;
   background-color: lightgray;
+  background-image: url("../img/contacts-map.png");
+  background-position: center;
 
   @media (min-width: 760px) {
     background-image: url("../img/contacts-map-desktop.png");
@@ -25,6 +28,7 @@
 }
 
 .contacts__wrapper {
+  margin: 0 auto;
   padding-top: 25px;
   width: 280px;
   background-color: #ffffff;
@@ -33,6 +37,10 @@
   @media (min-width: 760px) {
     padding-top: 45px;
     width: 492px;
+  }
+
+  @media (min-width: 1170px) {
+    margin: 0;
   }
 }
 
@@ -81,7 +89,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 27px;
-  padding-left: 60px;
+  padding-left: 30px;
   width: 280px;
   line-height: 17px;
 
@@ -91,21 +99,38 @@
 
   @media (min-width: 760px) {
     padding-top: 55px;
-    padding-left: 116px;
+    padding-left: 67px;
     width: 492px;
   }
 }
 
 .contacts__address {
+  position: relative;
   margin: 0;
   margin-bottom: 8px;
+  padding-left: 30px;
   width: 190px;
+
+  & svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #0a5a7e;
+    width: 17.5px;
+    height: 22px;
+  }
 
   @media (min-width: 760px) {
     margin-bottom: 12px;
+    padding-left: 51px;
     width: 265px;
     font-size: 20px;
     line-height: 28px;
+
+    & svg {
+      width: 30px;
+      height: 32px;
+    }
   }
 }
 
@@ -119,14 +144,31 @@
 }
 
 .contacts__phone {
+  position: relative;
   display: block;
   margin-bottom: 35px;
+  padding-left: 30px;
   color: #000000;
   text-decoration: none;
 
+  & svg {
+    position: absolute;
+    left: 2px;
+    top: 0;
+    width: 14px;
+    height: 14px;
+    color: #0a5a7e;
+  }
+
   @media (min-width: 760px) {
     margin-bottom: 62px;
+    padding-left: 51px;
     font-size: 20px;
     line-height: 37px;
+
+    & svg {
+      width: 24px;
+      height: 24px;
+    }
   }
 }
