--- a/source/sass/blocks/main-content.scss
+++ b/source/sass/blocks/main-content.scss
@@ -1,5 +1,5 @@
 .main-content__banner {
-  margin-bottom: 35px;
+  //margin-bottom: 35px;
 
   @media (min-width: 760px) {
     margin-bottom: 65px;
