--- a/source/sass/blocks/popular-product.scss
+++ b/source/sass/blocks/popular-product.scss
@@ -1,12 +1,16 @@
 .popular-product {
   display: none;
 
+  width: 290px;
+
+  box-shadow:
+    7px 11px 59px 0 rgba(99, 99, 99, 0.2);
+
   &:nth-child(1),
   &:nth-child(2),
   &:nth-child(3) {
     display: block;
   }
-  width: 290px;
 
   @media (min-width: 760px) {
     display: block;
@@ -15,10 +19,10 @@
 }
 
 .popular-product__image {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
   height: 350px;
   background-color: #c9dfeb;
   background-image: url("../img/popular-card-bg.png");
@@ -26,7 +30,115 @@
   @media (min-width: 760px) {
     height: 435px;
     background-image: url("../img/popular-card-bg-desktop.png");
+
+    &:hover .popular-product__overlay {
+      display: flex;
+    }
   }
+}
+
+.popular-product__sticker {
+  position: absolute;
+  right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 61px;
+  height: 18px;
+
+  font-size: 8px;
+  font-weight: bold;
+  line-height: 10px;
+  color: #ffffff;
+  text-transform: uppercase;
+
+  @media (min-width: 760px) {
+    right: 14px;
+    width: 76px;
+    height: 22px;
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+
+.popular-product__sticker--new {
+  top: 17px;
+  background-color: #419fc9;
+
+  @media (min-width: 760px) {
+    top: 22px;
+  }
+}
+
+.popular-product__sticker--sale {
+  top: 45px;
+  background-color: #ff0101;
+
+  @media (min-width: 760px) {
+    top: 56px;
+  }
+}
+
+.popular-product__sticker--hit {
+  top: 71px;
+  background-color: #0a5a7e;
+
+  @media (min-width: 760px) {
+    top: 89px;
+  }
+}
+
+.popular-product__overlay {
+  position: absolute;
+  bottom: 0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 19px;
+  width: 358px;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow:
+    0 0 73px 0 rgba(0, 0, 0, 0.18);
+
+  &:hover {
+    display: flex;
+  }
+}
+
+.popular-product__overlay-heading {
+  margin: 0;
+  margin-bottom: 14px;
+  font-size: 19px;
+  font-weight: bold;
+  line-height: 20px;
+  color: #525252;
+}
+
+.popular-product__measurements-list {
+  @include list-reset;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 17px;
+  padding: 0 24px;
+  width: 100%;
+}
+
+.popular-product__measurements-item {
+  font-size: 19px;
+  line-height: 20px;
+  color: #525252;
+}
+
+.popular-product__quick-view {
+  margin-bottom: 18px;
+  font-size: 19px;
+  line-height: 20px;
+  color: #0a5a7e;
+  text-decoration-color: rgba(10, 90, 126, 0.4);
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .popular-product__info {
@@ -46,12 +158,13 @@
   }
 }
 
-.popular-product__description {
+.popular-product__heading {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
   margin: 0;
   width: 150px;
   font-size: 15px;
+  font-weight: normal;
   line-height: 17px;
 
   @media (min-width: 760px) {
