--- a/source/sass/blocks/popular-sections.scss
+++ b/source/sass/blocks/popular-sections.scss
@@ -1,7 +1,9 @@
 .popular-sections {
-  border: 1px solid #329bc9;
-  border-left: none;
-  border-right: none;
+  @media (min-width: 760px) {
+    border: 1px solid #329bc9;
+    border-left: none;
+    border-right: none;
+  }
 }
 
 .popular-sections__list {
@@ -31,20 +33,10 @@
 .popular-sections__item {
   @media (min-width: 760px) {
     box-sizing: border-box;
+    position: relative;
     display: flex;
-    align-items: center;
-    padding: 0 11px;
-    min-height: 56px;
-    &:hover {
-      border: 1px solid #04235d;
-    }
-  }
 
-  @media (min-width: 1170px) {
-    &:not(:last-child) {
-      margin-right: 64px;
-      padding: 0;
-    }
+    min-height: 56px;
   }
 }
 
@@ -58,7 +50,34 @@
   text-decoration: none;
   color: #000000;
 
+
   @media (min-width: 760px) {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 0 11px;
+    width: 100%;
     color: #3199c7;
+    z-index: 1;
+
+    &:hover {
+      box-shadow:
+        inset 0 0 0 1px #04235d;
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 29px;
+        background-color: #ffffff;
+        z-index: -1;
+      }
+    }
   }
+
+  @media (min-width: 1170px) {
+    padding: 0 32px;
+  }
+
+
 }
