--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,4 +19,5 @@
 @import "blocks/footer-categories";
 @import "blocks/schedule-table";
 @import "blocks/footer-info";
+@import "blocks/popup";
 @import "helpers";
