--- a/source/sass/blocks/banner.scss
+++ b/source/sass/blocks/banner.scss
@@ -1,10 +1,9 @@
 .banner {
   background-image: url("../img/banner-bg.jpg");
-  background-position: center;
+  background-position: 50%;
   background-color: #aad2e6;
   @media (min-width: 760px) {
-    background-image: none;
-    height: 564px;
+    background-image: url("../img/banner-bg-desktop.jpg");
     box-shadow:
       0 18px 38px 0 rgba(0, 0, 0, 0.10)
   }
@@ -14,15 +13,51 @@
   @include mobile-content;
   position: relative;
   display: flex;
-  flex-direction: column;
   padding-top: 19px;
   @media (min-width: 760px) {
-    display: none;
-    padding-top: 180px;
+    @include tablet-content;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 120px;
   }
 
   @media (min-width: 1170px) {
+    @include desktop-content;
     padding-top: 142px;
+  }
+}
+
+.banner__button {
+  display: none;
+
+  @media (min-width: 760px) {
+    display: block;
+    //margin-bottom: 102px;
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 50%;
+    background-color: #ffffff;
+    box-shadow:
+      inset 0 3px 7px 0 rgba(0, 0, 0, 0.13);
+  }
+
+  @media (min-width: 1170px) {
+    &--left {
+      margin-left: 20px;
+    }
+
+    &--right {
+      margin-right: 20px;
+    }
+
+  }
+}
+
+.banner__text {
+  @media (min-width: 760px) {
+    margin-right: auto;
+    padding-left: 34px;
   }
 }
 
@@ -34,6 +69,19 @@
   line-height: 31px;
   color: #0a5a7e;
   letter-spacing: 1.5px;
+
+  @media (min-width: 760px) {
+    width: 302px;
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  @media (min-width: 1170px) {
+    padding-top: 38px;
+    width: 510px;
+    font-size: 48px;
+    line-height: 61px;
+  }
 }
 
 .banner__lead {
@@ -44,6 +92,19 @@
   font-weight: 300;
   line-height: 31px;
   color: #0a5a7e;
+
+  @media (min-width: 760px) {
+    margin-bottom: 16px;
+    width: 312px;
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 510px;
+    font-size: 48px;
+    line-height: 61px;
+  }
 }
 
 .banner__description {
@@ -53,15 +114,27 @@
   font-weight: 300;
   line-height: 19px;
   color: #000000;
+
+  @media (min-width: 760px) {
+    width: 300px;
+    font-size: 14px;
+    line-height: 15px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 490px;
+    font-size: 18px;
+    line-height: 25px;
+  }
 }
 
 .banner__link {
   box-sizing: border-box;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   margin-bottom: 30px;
-  padding-top: 12px;
-  padding-left: 27px;
   width: 143px;
   height: 34px;
   border: 1px solid #ffffff;
@@ -71,10 +144,47 @@
   text-transform: uppercase;
   color: #ffffff;
   letter-spacing: 4px;
+
+  @media (min-width: 760px) {
+    margin-bottom: 52px;
+    width: 130px;
+    height: 30px;
+    border-color: #0a5a7e;
+    color: #0a5a7e;
+
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: 1170px) {
+    width: 217px;
+    height: 51px;
+    font-size: 16px;
+    line-height: 23px;
+  }
 }
 
 .banner__image {
   position: absolute;
   right: 0;
   bottom: 0;
+  width: 138px;
+  height: 152px;
+
+  @media (min-width: 760px) {
+    right: 100px;
+    width: 270px;
+    height: 272px;
+  }
+
+  @media (min-width: 1170px) {
+    width: 451px;
+    height: 456px;
+  }
 }
