--- a/source/sass/blocks/categories.scss
+++ b/source/sass/blocks/categories.scss
@@ -60,22 +60,43 @@
 
 .categories__item {
   box-sizing: border-box;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   padding-right: 23px;
+  width: 290px;
+  height: 215px;
   background-color: #e9f3fd;
   background-position: right;
   background-repeat: no-repeat;
+  transition-duration: 0.2s;
+  transition-property: background-color, color;
 
-  width: 290px;
-  height: 215px;
+  @media (min-width: 1170px) {
+    &:hover .categories__to-catalog,
+    &:focus-within .categories__to-catalog {
+      right: 15px;
+      bottom: 30px;
+    }
+  }
 
   &:nth-child(1) {
     background-image: url(../img/woman-1-bg.png);
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-1-desktop-bg.png);
+
+      &:hover picture,
+      &:focus-within picture{
+        background-image: url("../img/woman-1-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 282px;
+        height: 530px;
+      }
     }
   }
 
@@ -84,6 +105,17 @@
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-2-desktop-bg.png);
+
+      &:hover picture,
+      &:focus-within picture {
+        background-image: url("../img/woman-2-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 266px;
+        height: 528px;
+      }
     }
   }
 
@@ -92,6 +124,16 @@
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-3-desktop-bg.png);
+      &:hover picture,
+      &:focus-within picture {
+        background-image: url("../img/woman-3-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 195px;
+        height: 280px;
+      }
     }
   }
 
@@ -100,6 +142,17 @@
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-4-desktop-bg.png);
+
+      &:hover picture,
+      &:focus-within picture {
+        background-image: url("../img/woman-4-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 152px;
+        height: 276px;
+      }
     }
   }
 
@@ -108,6 +161,19 @@
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-5-desktop-bg.png);
+
+      &:hover picture,
+      &:focus-within picture {
+        position: absolute;
+        left: -30px;
+        background-image: url("../img/woman-5-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 189px;
+        height: 276px;
+      }
     }
   }
 
@@ -116,6 +182,17 @@
 
     @media (min-width: 1170px) {
       background-image: url(../img/woman-6-desktop-bg.png);
+
+      &:hover picture,
+      &:focus-within picture {
+        background-image: url("../img/woman-6-desktop-hover.png");
+      }
+
+      &:hover img,
+      &:focus-within img {
+        width: 310px;
+        height: 358px;
+      }
     }
   }
 
@@ -127,17 +204,56 @@
 
   @media (min-width: 1170px) {
     margin-bottom: 20px;
+    padding-right: 14px;
     width: 365px;
     height: 215px;
 
+    &:hover,
+    &:focus-within {
+      background-color: #0a5a7e;
+    }
+
+    &:hover .categories__link,
+    &:focus-within .categories__link {
+      font-weight: bold;
+      color: #ffffff;
+    }
+
+    &:hover .categories__to-catalog,
+    &:focus-within .categories__to-catalog {
+      display: flex;
+    }
+
+    &:hover img,
+    &:focus-within img {
+      opacity: 0;
+    }
+
     &:nth-child(1),
     &:nth-child(2) {
+      padding-right: 48px;
       width: 560px;
       height: 410px;
+
+      &:hover .categories__to-catalog,
+      &:focus-within .categories__to-catalog {
+        right: 47px;
+        bottom: 73px;
+      }
+
+      & .categories__to-catalog {
+        width: 192px;
+      }
     }
 
     &:last-child {
       width: 1145px;
+
+      &:hover .categories__to-catalog,
+      &:focus-within .categories__to-catalog {
+        right: 11px;
+        bottom: 33px;
+      }
     }
   }
 }
@@ -150,11 +266,43 @@
   text-decoration: none;
 
   @media (min-width: 1170px) {
+    margin-left: auto;
     font-size: 24px;
+
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
 
-.categories__img {
+.categories__to-catalog {
+  position: absolute;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 168px;
+  height: 46px;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+
+  @media (min-width: 1170px) {
+    &:hover,
+    &:focus {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
 }
 
 .categories__name {
