--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -195,11 +195,17 @@
 
 .main-nav__sign-in {
   display: block;
-  margin-left: auto;
   margin-right: 21px;
+  margin-bottom: 4px;
+  margin-left: auto;
   width: 22px;
   height: 26px;
-  background-color: #ffffff;
+
+  & svg {
+    width: 26px;
+    height: 30px;
+    color: #ffffff;
+  }
 
   @media (min-width: 760px) {
     display: none;
@@ -207,6 +213,7 @@
 }
 
 .main-nav__cart {
+  position: relative;
   display: flex;
   align-items: center;
 
@@ -214,6 +221,15 @@
     width: 31px;
     height: 27px;
     color: #ffffff;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: -9px;
+    width: 1px;
+    height: 30px;
+    background-color: #ffffff;
   }
 
   @media (min-width: 760px) {
