--- a/source/sass/blocks/popular-sections.scss
+++ b/source/sass/blocks/popular-sections.scss
@@ -60,7 +60,9 @@
     color: #3199c7;
     z-index: 1;
 
-    &:hover {
+    &:hover,
+    &:focus {
+      color: #04235d;
       box-shadow:
         inset 0 0 0 1px #04235d;
       &::before {
@@ -71,6 +73,12 @@
         height: 29px;
         background-color: #ffffff;
         z-index: -1;
+      }
+
+      &:active {
+        color: #04033d;
+        box-shadow:
+          inset 0 0 0 2px #04033d;
       }
     }
   }
